@@ -383,3 +383,6 @@ August 3, 2004: pawd to recognize "linkx" type mounts.
 September 1, 2004: bug fix to avoid race condition in calls to mntctl on
 AIX.
 
+* Jonathan Chen <jon+amd@spock.org>
+October 22, 2004: patch/fix to move mlock/mlockall/plock code after the
+fork().
