@@ -53,7 +53,7 @@ AH_BOTTOM([
 dnl
 dnl AC_CONFIG_AUX_DIR(m4)
 AC_PREREQ(2.52)
-AC_REVISION($Revision: 1.73 $)
+AC_REVISION($Revision: 1.74 $)
 AC_COPYRIGHT([Copyright (c) 1997-2005 Erez Zadok])
 dnl find out system type
 AC_MSG_NOTICE(*** SYSTEM TYPES ***)
@@ -283,6 +283,7 @@ AC_CHECK_FUNCS(			\
 	hesiod_init		\
 	hesiod_reload		\
 	hesiod_to_bind		\
+	madvise			\
 	memcmp			\
 	memcpy			\
 	memmove			\
