@@ -50,6 +50,9 @@
 	* recognize other mount types in pawd: host, linkx, and nfsx
 	* allow exactly one of umount and unmount in type:=program
 	* race condition between calls to mntctl() on AIX
+	* plock/mlockall wasn't inherited by fork(); moved after
+	  daemonizing.
+
 
 *** Notes specific to am-utils version 6.1b4
 
